--- a/index.html
+++ b/index.html
@@ -6,25 +6,37 @@
     <title>BYUI Mission Statement</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class = content>
-        <header>
-            <h1>MISSION STATEMENT</h1>
-            <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
-        </header>
-        <main>
-            <p>Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.</p>
-            <p><em>The university does this by:</em></p>
-            <ol class = "list">
-                <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, culteral, and social environment.</li>
-                <li>Providing a high-quality education that prepared students of diverse interests and abilities for lifelong learning and employment.</li>
-                <li>Serving as many students as possible within resource constraints</li>
-                <li>Delivering education that is affordable for students and the Church.</li>
-            </ol>
-        </main>
-        <footer>
-            <img src="byuilogo.webp" alt = "BYUI Logo" id = "logo">
-        </footer>
+<body class="none">
+    <select>
+        <option>Choose Mode</option>
+        <option value="dark">Dark</option>
+        <option value="light">Light</option>
+    </select>
+    <div class = wrap>
+        <div class = content>
+            <header>
+                <h1>MISSION STATEMENT</h1>
+                <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
+            </header>
+            <main>
+                <p>Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.</p>
+                <p><em>The university does this by:</em></p>
+                <ol class = "list">
+                    <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, culteral, and social environment.</li>
+                    <li>Providing a high-quality education that prepared students of diverse interests and abilities for lifelong learning and employment.</li>
+                    <li>Serving as many students as possible within resource constraints</li>
+                    <li>Delivering education that is affordable for students and the Church.</li>
+                </ol>
+            </main>
+            <footer>
+                <img src="byuilogo_dark.png" alt = "BYUI Logo" id = "logo">
+            </footer>
+        </div>
     </div>
+
+
+
+
+    <script src="mission.js"></script>
 </body>
 </html>
