Upload coolpics final

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -13,9 +13,9 @@
     <header>
         <h1>Cool Pics 📷</h1>
         <div class="button-container">
-            <button>Menu</button>
+            <button class = "menu-btn">Menu</button>
         </div>
-        <nav>
+        <nav class = "menu">
            <a href = "#">Home</a> 
            <a href = "#">People</a> 
            <a href = "#">Places</a>
