Finish blog and update credit card

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <li><a href="mission/index.html">Mission Statement</a></li>
         <li><a href="coolpic/index.html">Cool Pics</a></li>
         <li><a href="blog/index.html">Blog</a></li>
+        <li><a href="creditcard/index.html">Credit Card</a></li>
+
     </ul>
     
     
