--- a/creditcard/index.html
+++ b/creditcard/index.html
@@ -21,17 +21,24 @@
             <form id="creditCardForm" action="completed.html">
             <label for="cardNumber">CARD NUMBER</label>
             <input id="cardNumber" type="number" name="cardNumber" placeholder= "1234 5678 9101 1020" length="16" required>
-            <label for="cardHolder">CARD HOLDER</label>
-            <input id="cardNumber" type="text" name="cardHolder" placeholder="John Doe" required>
-            <label for="expiration">EXPIRATION</label>
-            <input id="expirationMonth" type="text" name="expirationMonth" aria-labelledby="expiration" placeholder="MM" length= "2" required>
-            <input id="expirationYear" type="text" name="expirationYear" aria-labelledby="expiration" placeholder="YY" length="2" required>
+            <div id="cardholder-container">
+                <label for="cardHolder">CARD HOLDER</label>
+                <input id="cardHolder" type="text" name="cardHolder" placeholder="John Doe" required>
+            </div>
+            <div id="exp-container">
+                <label for="expiration">EXPIRATION</label>
+                <input id="expirationMonth" type="text" name="expirationMonth" aria-labelledby="expiration" placeholder="MM" length= "2" required>
+                <input id="expirationYear" type="text" name="expirationYear" aria-labelledby="expiration" placeholder="YY" length="2" required>
+            </div>
+            <div id="cvc-container">
+                <label for="key">CVC/CVV</label>
+                <input id="key" type="number" name="key" placeholder="XXX" required>
+                <p>Last 3 digits</p>
+            </div>
         </div>
         
         <div id="card-back">
             <div id="card-stripe"></div>
-            <label for="key">CVC/CVV</label>
-            <input id="key" type="number" name="key" placeholder="xxx" required>
         </div>
         <button type="button" id="card-btn">Submit</button>
     </div>
