Build character card

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="coolpic/index.html">Cool Pics</a></li>
         <li><a href="blog/index.html">Blog</a></li>
         <li><a href="creditcard/index.html">Credit Card</a></li>
+        <li><a href="charactercard/index.html">Character Card</a></li>
 
     </ul>
     
