--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="blog/index.html">Blog</a></li>
         <li><a href="creditcard/index.html">Credit Card</a></li>
         <li><a href="charactercard/index.html">Character Card</a></li>
+        <li><a href="recipes/index.html"></a>Recipes</li>
 
     </ul>
     
