--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="creditcard/index.html">Credit Card</a></li>
         <li><a href="charactercard/index.html">Character Card</a></li>
         <li><a href="recipes/index.html"></a>Recipes</li>
+        <li><a href="ethachu/site-plan.html"></a>Personal Project Site Plan</li>
 
     </ul>
     
