Correct index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li><a href="blog/index.html">Blog</a></li>
         <li><a href="creditcard/index.html">Credit Card</a></li>
         <li><a href="charactercard/index.html">Character Card</a></li>
-        <li><a href="recipes/index.html"></a>Recipes</li>
-        <li><a href="ethachu/site-plan.html"></a>Personal Project Site Plan</li>
+        <li><a href="recipes/index.html">Recipes</a></li>
+        <li><a href="ethachu/site-plan.html">Personal Project Site Plan</a></li>
 
     </ul>
     
