--- a/ethachu/site-plan.html
+++ b/ethachu/site-plan.html
@@ -124,7 +124,7 @@
 				There will be a search feature in the page to load information about a specific character in the series.
 			</p>
             <h2>Wireframe</h2>
-            <img src="ethachu_wire_frame.png" alt="ethachu wireframe" />
+            <img src="images/ethachu_wire_frame.png" alt="ethachu wireframe" />
             
         </main>
 	</body>
