--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="charactercard/index.html">Character Card</a></li>
         <li><a href="recipes/index.html">Recipes</a></li>
         <li><a href="ethachu/site-plan.html">Personal Project Site Plan</a></li>
+        <li><a href="ethachu/index.html">Ethachu Site</a></li>
 
     </ul>
     
