Update mobile friendly

--- a/ethachu/index.html
+++ b/ethachu/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Aaron Aultz">
     <meta name="description" content="Ethachu Movie Series">
-    <title>Ethachu</title>
+    <title>The Ethachu Saga</title>
     <link rel="stylesheet" href="ethachu.css">
     <link rel="icon" type="image/png" href="images/official-logo.png">
 
@@ -25,13 +25,13 @@
     <main>
         <div class="container">
             <div class="hero-slides">
-                <h1 class="main-title">Ethachu: The Series</h1>
+                <h1 class="main-title">The Ethachu Saga</h1>
                 <img id="hero-image" src="images/ethachu_actionshot1.png" alt="Hero image">
                 <div id="thumbnail-bar" class="thumbnail-bar"></div>
             </div>
             <div class="description">
-                <h2>What is Ethachu</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In Ethachu’s world, mystery and adventure collide. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In Ethachu’s world, mystery and adventure collide. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In Ethachu’s world, mystery and adventure collide. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In Ethachu’s world, mystery and adventure collide. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In Ethachu’s world, mystery and adventure collide. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In Ethachu’s world, mystery and adventure collide.</p>
+                <h2>What is Ethachu?</h2>
+                <p>In a bizarre twist of fate, a curious young boy is accidentally transported into a video game world. Though he eventually escapes and returns to reality, he’s forever changed—imbued with mysterious powers reminiscent of the legendary Pikachu. Embracing his transformation, he takes on a new identity: Ethachu. But extraordinary abilities rarely go unnoticed. As word spreads, Ethachu finds himself caught in a growing storm—pursued by powerful enemies who seek to destroy him, and shadowy allies who claim they can help him unlock his true potential. </p>
             </div>
         </div>
     </main>
