--- a/ethachu/videos.html
+++ b/ethachu/videos.html
@@ -42,22 +42,23 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
+      <div id="video-summary" class="video-summary"></div>
     </section>
   </main>
 
-    <footer>
-        <img class="main-logo" src="images/official-logo.png" alt="Ethachu Official Logo">
-        <nav  class="footer-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="videos.html">Videos</a></li>
-                <li><a href="credits.html">Credits</a></li>
-            </ul>
-        </nav>
-        <address>&copy; 2025 Aaron Aultz</address>
-    </footer>
+  <footer>
+      <img class="main-logo" src="images/official-logo.png" alt="Ethachu Official Logo">
+      <nav  class="footer-nav">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="videos.html">Videos</a></li>
+              <li><a href="credits.html">Credits</a></li>
+          </ul>
+      </nav>
+      <address>&copy; 2025 Aaron Aultz</address>
+  </footer>
 
 
-    <script src = "ethachu.js"></script>
+  <script src = "ethachu.js"></script>
 </body>
 </html>
